# load-balancer-sandbox

./: .clang-format  .clang-tidy  .gitignore  .repomixignore  CMakeLists.txt  CMakePresets.json  justfile  meet1  readme.md
.github/workflows/: ci.yml
final_report/: Report.docx  Results.xlsx  json_to_table.py  peak_loads.xlsx
idea/: Status.md  meet.md  preset_suites_descriptions.xlsx
libs/: CMakeLists.txt  benchmark-config.hpp  benchmark-stats.hpp  benchmark.hpp  clients-group.hpp  coroutine-utils.hpp  generators.hpp  load-balancing.hpp  manager.hpp  pick-policy.hpp  preset-parser.hpp  server.hpp  task.hpp
presets/: perfect.json  populator.py  test.json
presets/burstNorm/: burstnorm_easy.json  burstnorm_hard.json  burstnorm_medium.json  burstnorm_reversed_easy.json  burstnorm_reversed_hard.json  burstnorm_reversed_medium.json
presets/burstNormHMS/: burstnormhms_easy.json  burstnormhms_hard.json  burstnormhms_medium.json
presets/churn/: churnbad.json  churngood.json  churnhms.json
presets/population/: uniform0_-1468431909.json
presets/sticky/: stickychurn.json  stickydefault.json
presets/uniform/: uniform0.json
presets/uniformD/: uniformd_easy.json  uniformd_hard.json  uniformd_medium.json
presets/varReqCost/: varreqcost_easy.json  varreqcost_hard.json  varreqcost_medium.json
presets/varReqCostHMS/: varreqcosthms_easy.json  varreqcosthms_hard.json  varreqcosthms_medium.json
schems/: common-defs.json  preset-schema.json  result-schema.json
tests/: CMakeLists.txt  benchmark-output-stress-tests.cpp  benchmark-stats-tests.cpp  benchmark-tests.cpp  clients-group-tests.cpp  crashed-server-scope-tests.cpp  generators-tests.cpp  manager-tests.cpp  preset-parser-tests.cpp  server-tests.cpp  server.cpp  task.cpp
web/: README.md  pyproject.toml
web/data/: results.json
web/lbweb/: app.py  config.py  data.py  demo.py  models.py  runner.py
web/static/: app.js  style.css
web/templates/: index.html
